# dockpulse-iot

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  field_test.csv  partitions.csv  sdkconfig.defaults
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  task.yml
.github/workflows/: build.yml  format.yml  pr-title.yml
components/dp_common/: CMakeLists.txt  dp_common.c
components/dp_common/include/: dp_common.h
components/dp_gateway/: CMakeLists.txt  dp_gateway.c  dp_gateway_adopt.c  dp_gateway_decom.c  dp_gateway_mqtt.c  dp_gateway_priv.h  dp_gateway_wifi.c
components/dp_gateway/include/: dp_gateway.h
components/dp_io/: CMakeLists.txt  dp_io.c  idf_component.yml
components/dp_io/include/: dp_io.h
components/dp_mesh/: CMakeLists.txt  dp_mesh.c  dp_mesh_priv.h  dp_mesh_provisioner.c  dp_mesh_sensor.c
components/dp_mesh/include/: dp_mesh.h
components/dp_prov/: CMakeLists.txt  dp_prov.c
components/dp_prov/include/: dp_prov.h
components/dp_radar/: CMakeLists.txt  dp_radar.c  dp_radar_filter.c
components/dp_radar/include/: dp_radar.h  dp_radar_filter.h
docs/: architecture.md  development.md  factory-flash.md  troubleshooting.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  gateway_main.c  sensor_main.c
tools/: _common.sh  build.sh  capture-radar.py  factory-flash.py  factory-keygen.sh  factory_flash_helpers.py  flash.sh  list-ports.sh  monitor.sh  print-qr.py  run.sh  sim-adopt.sh  verify-device.py
